examples/test/conf/Gateway/TLS/NoHostnameListener/Gateway_edgion-test_gateway-tls-no-hostname.yaml
# Gateway TLS listener without hostname should not be used for TLS cert matching
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tls-no-hostname
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: https
      protocol: HTTPS
      port: 31286
      tls:
        mode: Terminate
        certificateRefs:
          - name: edge-tls
            namespace: edgion-test
